@@ -10,6 +10,12 @@ if ( ! $is_admin ) {
 if ( $error == "" ) {
   while ( list ( $key, $value ) = each ( $HTTP_POST_VARS ) ) {
     $setting = substr ( $key, 6 );
+    // validate key name.  should start with "admin_" and not include
+    // any unusual characters that might cause SQL injection
+    if ( ! preg_match ( '/admin_[A-Za-z0-9_]+$/', $key ) ) {
+      die_miserable_death ( 'Invalid admin setting name "' .
+        $key . '"' );
+    }
     if ( strlen ( $setting ) > 0 ) {
     $setting = strtoupper ( $setting );
       $sql = "DELETE FROM webcal_config WHERE cal_setting = '$setting'";
