@@ -1,4 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Fixed vulnerablity: SQL injection possible in edit_template.php,
+   activity_log.php, admin_handler.php, pref_handler.php, export_handler.php
  - Fixed bug 1365435: "Availability...." has no action by clicking the button (tasks)
  - Fixed bug 1368088: viewing tasks depends on their belonging selected categories
  - Fixed bug 1365541: categories for tasks will not be saved
